--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -4,5 +4,7 @@
     {{ parent() }}
 {% endblock %}
 {% block body %}
-<center><h1 style="color:white">IMMOSTAR</h1></center>
+<center><h1 style="color:white">IMMOSTAR</h1>
+<img style="width:1000px; height:650px" src="Images/Maison.jpg"></center>
+<br/><br/>
 {% endblock %}
