--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,21 +26,21 @@
                                 <li><a style="background-color:#e83753; color:#ffffff;" href="/ajouterBien">Ajouter bien</a></li>
                                 <li><a style="background-color:#e83753; color:#ffffff;" href="/consulterBien">Consulter biens</a></li>
                                 <li><a style="background-color:#e83753; color:#ffffff;" href="/ajouterTypeBien">Ajouter type de biens</a></li>
-                                <li><a style="background-color:#e83753; color:#ffffff;" href="/supprimerTypeBien">Consulter types de biens</a></li>
+                                <li><a style="background-color:#e83753; color:#ffffff;" href="/consulterTypesBien">Consulter types de biens</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a style="color:#ffffff; background-color:#e83753;" href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Visiteurs<span class="caret"></span></a>
                             <ul style="background-color:#e83753;" class="dropdown-menu" role="menu">
                                 <li><a style="background-color:#e83753; color:#ffffff;" href="/ajouterVisiteur">Ajouter visiteur</a></li>
-                                <li><a style="background-color:#e83753; color:#ffffff;" href="">Consulter visiteurs</a></li>
+                                <li><a style="background-color:#e83753; color:#ffffff;" href="/consulterVisiteurs">Consulter visiteurs</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a style="color:#ffffff; background-color:#e83753;" href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Visites<span class="caret"></span></a>
                             <ul style="background-color:#e83753;" class="dropdown-menu" role="menu">
                                 <li><a style="background-color:#e83753; color:#ffffff;" href="/ajouterVisite">Ajouter visite</a></li>
-                                <li><a style="background-color:#e83753; color:#ffffff;" href="">Consulter visites</a></li>
+                                <li><a style="background-color:#e83753; color:#ffffff;" href="/consulterVisites">Consulter visites</a></li>
                             </ul>
                         </li>
                     </ul>
