--- a/templates/bien/modifierBien.html.twig
+++ b/templates/bien/modifierBien.html.twig
@@ -1,18 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des biens{% endblock %}
+{% block title %}Modifier bien{% endblock %}
 
 {% block body %}
-    <center>
-    {% if found == -1 %}
-        <p class="btn btn-warning">L'id ne correspond à aucun bien!</p>
+    {% if success == 1 %}
+        <center><div class="btn btn-success">
+            <a style="color:white">Bien modifié avec succès!</a>
+        </div></center>
         <br/><br/>
     {% endif %}
-    <div style="width: 85%; border: 1px solid black; background-color: background"><br/>
-    <h3><center>Liste des biens :</center></h3>
+    <center><div style="width: 85%; border: 1px solid black; background-color: background"><br/>
     <table width="95%">
         <tr style="border-bottom:1pt solid black;">
-            <th>Identifiant</th>
             <th>Nombre de Piece</th>
             <th>Nombre de Chambre</th>
             <th>Superficie</th>
@@ -23,9 +22,7 @@
             <th>Etat</th>
             <th>Type</th>
 	</tr>
-    {%  for bien in lesBiens %}
         <tr style="border-bottom:1pt solid black;">
-            <td style="border-left:1pt solid black;"><center>{{ bien.id }}</center></td> 
             <td style="border-left:1pt solid black;"><center>{{ bien.nbPiece }}</center></td>
             <td style="border-left:1pt solid black;"><center>{{ bien.nbChambre }}</center></td>
             <td style="border-left:1pt solid black;"><center>{{ bien.superficie }}</center></td>
@@ -34,12 +31,22 @@
             <td style="border-left:1pt solid black;"><center>{{ bien.annee }}</center></td>
             <td style="border-left:1pt solid black;"><center>{{ bien.localisation }}</center></td>
             <td style="border-left:1pt solid black;"><center>{{ bien.etat }}</center></td>
-            <td style="border-left:1pt solid black;"><center>{{ bien.idType.libelle }}</center></td>
-            <td style="border-left:1pt solid black;"><a class="btn btn-primary" href="/modifierBien/{{ bien.id }}">Modifier</a></td>
-            <td style="border-left:1pt solid black;border-right:1pt solid black;"><a class="btn btn-warning" href="/supprimerBien/{{ bien.id }}">Supprimer</a></td>
+            <td style="border-left:1pt solid black;border-right:1pt solid black"><center>{{ bien.idType.libelle }}</center></td>
         </tr>
-    {% endfor %}
-    </table>
+    </table>  
+    <h3><center>Formulaire de modification de bien :</center></h3>
+    {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+    {{ form_errors(form) }}
+    {{ form_widget(form) }}
     <br/>
+    <div class="row">
+        <div>
+            <a class="btn btn-danger" href="/consulterBien">Annuler</a>
+            <button style="margin-left: 20px" type="submit" class="btn btn-success">Valider</button>
+        </div>
+    </div>
+    <br/>
+    {{ form_end(form) }}
     </div></center>
+    <br/>
 {% endblock %}
